@@ -32,10 +32,10 @@
             <control type="panel" id="450">
                 <include>Dialog_Standard_List_Left</include>
                 <onleft>8000</onleft>
-                <onright>60</onright>
+                <onright>61</onright>
                 <onup>450</onup>
                 <ondown>450</ondown>
-                <pagecontrol>60</pagecontrol>
+                <pagecontrol>61</pagecontrol>
                 <itemlayout height="138" width="700" condition="![[String.StartsWith(ListItem.FolderPath,special://skin/extras/icons/) + !String.IsEqual(ListItem.Label,icons)]  | [String.StartsWith(Container(450).ListItem(1).FolderPath,special://skin/extras/icons/) + ListItem.IsParentFolder]]">
                     <control type="image">
                         <include>Dialog_Standard_List_Left_Icon</include>
@@ -129,7 +129,7 @@
             <control type="grouplist" id="8000">
                 <include>Dialog_Standard_Right_Grouplist</include>
                 <onright>450</onright>
-                <onleft>60</onleft>
+                <onleft>61</onleft>
                 <control type="button" id="413">
                     <description>Ok</description>
                     <label>186</label>
@@ -172,7 +172,7 @@
                 <height>687</height>
                 <width>1</width>
                 <texture colordiffuse="PixelLines">common/white.png</texture>
-                <visible>!Control.IsVisible(60)</visible>
+                <visible>!Control.IsVisible(61)</visible>
             </control>
             <control type="image">
                 <left>700</left>
@@ -180,9 +180,9 @@
                 <height>687</height>
                 <width>1</width>
                 <texture colordiffuse="darkline_separator">common/white.png</texture>
-                <visible>!Control.IsVisible(60)</visible>
+                <visible>!Control.IsVisible(61)</visible>
             </control>
-            <control type="scrollbar" id="60">
+            <control type="scrollbar" id="61">
                 <orientation>vertical</orientation>
                 <left>700</left>
                 <width>8</width>
