@@ -5,6 +5,7 @@ Add sort letter on scrolling
 Add page and item numbers on scrollbar
 Add uninstall icon in addon info
 Fix missing album cover icon
+Fix scrollbar ids for non library views
 
 [B]0.9.21[/B]
 Fix musicvideo info
